--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,39 @@
 absl-py==0.9.0
-astor==0.8.0
-beautifulsoup4==4.9.3
-brotlipy==0.7.0
+astor==0.8.1
 certifi==2020.6.20
-cffi==1.14.0
 chardet==3.0.4
-cryptography==3.1.1
+click==7.1.2
+Flask==1.1.2
 future==0.18.2
-gast==0.2.2
+gast==0.3.3
 google-pasta==0.2.0
-grpcio==1.16.1
+grpcio==1.30.0
+gunicorn==20.0.4
 h5py==2.10.0
 idna==2.10
+importlib-metadata==1.7.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-line-bot-sdk==1.17.0
-Markdown==3.1.1
-numpy==1.18.1
-olefile==0.46
-opt-einsum==3.1.0
-Pillow==8.0.1
-pycparser==2.20
-pyOpenSSL==19.1.0
-PySocks==1.7.1
+line-bot-sdk==1.16.0
+Mako==1.1.0
+Markdown==3.2.2
+MarkupSafe==1.1.1
+numpy==1.19.0
+pillow==7.2.0
+protobuf==3.12.2
 PyYAML==5.3.1
 requests==2.24.0
-scipy==1.4.1
-six==1.14.0
-soupsieve==2.0.1
-tensorboard==2.0.0
-tensorflow==2.0.0
-tensorflow-estimator==2.0.0
+scipy==1.5.1
+six==1.15.0
+tensorboard==1.14.0
+tensorflow==1.15.4 
+tensorflow-estimator==1.14.0
 termcolor==1.1.0
-urllib3==1.25.11
-Werkzeug==1.0.0
+Theano==1.0.4
+urllib3==1.25.9
+Werkzeug==1.0.1
 wrapt==1.12.1
+zipp==3.1.0
